// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#CalendarDay methods should render correctly 1`] = `
<ForwardRef
  colors={Object {}}
  isHidden={false}
>
  <ForwardRef
    colors={Object {}}
    isFuture={false}
    isHidden={false}
    isHovered={false}
    isPast={false}
    isSelected={false}
    number={1}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOver={[Function]}
  >
    1
  </ForwardRef>
</ForwardRef>
`;

exports[`#CalendarDay methods should render hidden 1`] = `
<ForwardRef
  colors={Object {}}
  isHidden={true}
>
  <ForwardRef
    colors={Object {}}
    isFuture={false}
    isHidden={true}
    isHovered={false}
    isPast={false}
    isSelected={false}
    number={1}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOver={[Function]}
  >
    1
  </ForwardRef>
</ForwardRef>
`;

exports[`#CalendarDay methods should render joined classes 1`] = `
<ForwardRef
  className="hey hou"
  colors={Object {}}
  isHidden={false}
>
  <ForwardRef
    colors={Object {}}
    isFuture={false}
    isHidden={false}
    isHovered={false}
    isPast={false}
    isSelected={false}
    number={1}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOver={[Function]}
  >
    1
  </ForwardRef>
</ForwardRef>
`;

exports[`#CalendarDay methods should render with class day 1`] = `
<ForwardRef
  className="day"
  colors={Object {}}
  isHidden={false}
>
  <ForwardRef
    colors={Object {}}
    isFuture={false}
    isHidden={false}
    isHovered={false}
    isPast={false}
    isSelected={false}
    number={1}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOver={[Function]}
  >
    1
  </ForwardRef>
</ForwardRef>
`;

exports[`#CalendarDay methods should render with joined & class day 1`] = `
<ForwardRef
  className="hey hou day"
  colors={Object {}}
  isHidden={false}
>
  <ForwardRef
    colors={Object {}}
    isFuture={false}
    isHidden={false}
    isHovered={false}
    isPast={false}
    isSelected={false}
    number={1}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOver={[Function]}
  >
    1
  </ForwardRef>
</ForwardRef>
`;
